New colors + new template organization

--- a/src/Bundle/JoseFramework/Resources/views/data_collector/tab/jws.html.twig
+++ b/src/Bundle/JoseFramework/Resources/views/data_collector/tab/jws.html.twig
@@ -1,242 +1,10 @@
 <div class="tab">
     <h2 class="tab-title">JWS</h2>
     <div class="tab-content">
-        <h3>JWS Builders</h3>
-        <p class="help">
-            The following table lists all JWS Builders declared as services in your application configuration
-            or using the Configuration Helper.<br>
-            Builders directly created through the JWS Builder Factory cannot be listed.
-        </p>
-        <table>
-            <thead>
-            <tr>
-                <th>Service ID</th>
-                <th>Algorithms</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for id, data in collector.getData().jws.jws_builders %}
-                <tr>
-                    <td>{{ id }}</td>
-                    <td>
-                        <ul>
-                            {% for algorithm in data.signature_algorithms %}
-                                <li>
-                                    <span{% if algorithm in collector.getData().algorithm.messages|keys %}
-                                        class="{{ collector.getData().algorithm.messages[algorithm]['severity'] }}"
-                                            {% else %}
-                                            {% endif %}>
-                                        {{ algorithm }}
-                                    </span>
-                                </li>
-                            {% endfor %}
-                        </ul>
-                    </td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
-
-        <h4>Built Tokens</h4>
-        <p class="help">
-            The following tables list all tokens issued by the JWS Builders.
-        </p>
-        <table>
-            <thead>
-            <tr>
-                <th scope="col">Success</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for event in collector.getData().jws.events.built_success %}
-                <tr>
-                    <td>{{ profiler_dump(event.jws) }}</td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
-        <table>
-            <thead>
-            <tr>
-                <th scope="col">Failure</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for event in collector.getData().jws.events.built_failure %}
-                <tr>
-                    <td>{{ profiler_dump(event.jws) }}</td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
-        <h3>JWS Verifiers</h3>
-        <p class="help">
-            The following table lists all JWS Verifiers declared as services in your application configuration
-            or using the Configuration Helper.<br>
-            Verifiers directly created through the JWS Verifier Factory cannot be listed.
-        </p>
-        <table>
-            <thead>
-            <tr>
-                <th>Service ID</th>
-                <th>Algorithms</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for id, data in collector.getData().jws.jws_verifiers %}
-                <tr>
-                    <td>{{ id }}</td>
-                    <td>
-                        <ul>
-                            {% for algorithm in data.signature_algorithms %}
-                                <li>
-                                    <span{% if algorithm in collector.getData().algorithm.messages|keys %}
-                                        class="{{ collector.getData().algorithm.messages[algorithm]['severity'] }}"
-                                            {% endif %}>
-                                        {{ algorithm }}
-                                    </span>
-                                </li>
-                            {% endfor %}
-                        </ul>
-                    </td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
-
-        <h4>Verified Tokens</h4>
-        <p class="help">
-            The following tables list all tokens verified (or not) by the JWS Verifiers.<br>
-            Failure reason is related to the key(s) used.
-        </p>
-        <table>
-            <thead>
-            <tr>
-                <th scope="col">Success</th>
-                <th scope="col">Key set</th>
-                <th scope="col">Signature index</th>
-                <th scope="col">Detached Payload (optional)</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for event in collector.getData().jws.events.verification_success %}
-                <tr>
-                    <td>{{ profiler_dump(event.jws) }}</td>
-                    <td>{{ profiler_dump(event.JWKSet) }}</td>
-                    <td>{{ event.signature }}</td>
-                    <td>{% if not event.detachedPayload is null %}{{ profiler_dump(event.detachedPayload) }}{% else %}<i>none</i>{% endif %}</td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
-        <table>
-            <thead>
-            <tr>
-                <th scope="col">Failure</th>
-                <th scope="col">Key set</th>
-                <th scope="col">Detached Payload (optional)</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for event in collector.getData().jws.events.verification_failure %}
-                <tr>
-                    <td>{{ profiler_dump(event.jws) }}</td>
-                    <td>{{ profiler_dump(event.JWKSet) }}</td>
-                    <td>{% if not event.detachedPayload is null %}{{ profiler_dump(event.detachedPayload) }}{% else %}<i>none</i>{% endif %}</td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
-        <h3>JWS Loaders</h3>
-        <p class="help">
-            The following table lists all JWS Loaders declared as services in your application configuration
-            or using the Configuration Helper.<br>
-            Loaders directly created through the JWS Loader Factory cannot be listed.
-        </p>
-        <table>
-            <thead>
-            <tr>
-                <th>Service ID</th>
-                <th>Serializers</th>
-                <th>Algorithms</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for id, data in collector.getData().jws.jws_loaders %}
-                <tr>
-                    <td>{{ id }}</td>
-                    <td>
-                        <ul>
-                            {% for serializer in data.serializers %}
-                                <li>{{ serializer }}</li>
-                            {% endfor %}
-                        </ul>
-                    </td>
-                    <td>
-                        <ul>
-                            {% for algorithm in data.signature_algorithms %}
-                                <li><span{% if algorithm == 'none' %} class="severity-low"{% endif %}>{{ algorithm }}</span></li>
-                            {% endfor %}
-                        </ul>
-                    </td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
-        {% set signatureAlgorithms = collector.getData().algorithm.algorithms %}
-        {% if signatureAlgorithms['Signature'] is defined %}
-            <h3>Available Signature Algorithms</h3>
-            <table>
-                <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Alias</th>
-                    <th>Message</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for alias, alg in signatureAlgorithms['Signature'] %}
-                    <tr>
-                        <td {% if alg.name in collector.getData().algorithm.messages|keys %}
-                            class="{{ collector.getData().algorithm.messages[alg.name]['severity'] }}"
-                                {% endif %}>{{ alg.name }}</td>
-                        <td {% if alg.name in collector.getData().algorithm.messages|keys %}
-                            class="{{ collector.getData().algorithm.messages[alg.name]['severity'] }}"
-                                {% endif %}>{{ alias }}</td>
-                        <td {% if alg.name in collector.getData().algorithm.messages|keys %}
-                            class="{{ collector.getData().algorithm.messages[alg.name]['severity'] }}"
-                                {% endif %}>
-                            {% if alg.name in collector.getData().algorithm.messages|keys %}
-                                {{ collector.getData().algorithm.messages[alg.name]['message']|raw }}
-                            {% endif %}
-                        </td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-            <h3>Serialization Modes</h3>
-            <p class="help">
-                The serialization modes are used to convert a JWS object into a JSON object.<br>
-                The JWS Compact serialization mode is the most common as it allows tokens to be used in a web context.
-            </p>
-            <table>
-                <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Alias</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for alias, name in collector.getData().jws.jws_serialization %}
-                    <tr>
-                        <td>{{ name }}</td>
-                        <td>{{ alias }}</td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-        {% else %}
-            There is no signature algorithm. Did you installed "web-token/jwt-signature-bundle"?
-        {% endif %}
+        {% include '@JoseFramework/data_collector/tab/jws/builders.html.twig' %}
+        {% include '@JoseFramework/data_collector/tab/jws/verifiers.html.twig' %}
+        {% include '@JoseFramework/data_collector/tab/jws/loaders.html.twig' %}
+        {% include '@JoseFramework/data_collector/tab/jws/algorithms.html.twig' %}
+        {% include '@JoseFramework/data_collector/tab/jws/serialization_modes.html.twig' %}
     </div>
 </div>
