--- a/src/Bundle/JoseFramework/Resources/views/data_collector/tab/jws/algorithms.html.twig
+++ b/src/Bundle/JoseFramework/Resources/views/data_collector/tab/jws/algorithms.html.twig
@@ -1,18 +1,18 @@
 <h3>Available Signature Algorithms</h3>
-{% set signatureAlgorithms = collector.getData().algorithm.algorithms %}
-{% if signatureAlgorithms['Signature'] is defined %}
-    <p class="help">
-        The following table lists all signature/hashing algorithms available in this environment.
-    </p>
-    <table>
-        <thead>
-        <tr>
-            <th>Name</th>
-            <th>Alias</th>
-            <th>Message</th>
-        </tr>
-        </thead>
-        <tbody>
+<p class="help">
+    The following table lists all signature/hashing algorithms available in this environment.
+</p>
+<table>
+    <thead>
+    <tr>
+        <th>Name</th>
+        <th>Alias</th>
+        <th>Message</th>
+    </tr>
+    </thead>
+    <tbody>
+    {% set signatureAlgorithms = collector.getData().algorithm.algorithms %}
+    {% if signatureAlgorithms['Signature'] is defined %}
         {% for alias, alg in signatureAlgorithms['Signature'] %}
             <tr class="{% if alg.name in collector.getData().algorithm.messages|keys %}{{ collector.getData().algorithm.messages[alg.name]['severity']|raw }}{% else %}no-severity{% endif %}">
                 <td>{{ alg.name }}</td>
@@ -24,8 +24,10 @@
                 </td>
             </tr>
         {% endfor %}
-        </tbody>
-    </table>
-{% else %}
-    <p>There is no signature/hashing algorithm. Did you installed "web-token/jwt-signature"?</p>
-{% endif %}
+    {% else %}
+        <tr>
+            <td colspan="3">There is no signature/hashing algorithm. Did you installed "web-token/jwt-signature"?</td>
+        </tr>
+    {% endif %}
+    </tbody>
+</table>
