Header/Claim check events

--- a/src/Bundle/JoseFramework/Resources/views/data_collector/tab/claim_checker/checkers.html.twig
+++ b/src/Bundle/JoseFramework/Resources/views/data_collector/tab/claim_checker/checkers.html.twig
@@ -1,6 +1,6 @@
 <h3>Available Claim Checkers</h3>
 <p class="help">
-    Each Claim Checker will check a dedicated header parameter.
+    Each Claim Checker will check a specific header parameter.
 </p>
 <table>
     <thead>
