--- a/src/Bundle/JoseFramework/Resources/views/data_collector/tab/header_checker/checkers.html.twig
+++ b/src/Bundle/JoseFramework/Resources/views/data_collector/tab/header_checker/checkers.html.twig
@@ -1,6 +1,6 @@
 <h3>Available Header Checkers</h3>
 <p class="help">
-    Each Header Checker will check a dedicated header parameter.<br>
+    Each Header Checker will check a specific header parameter.<br>
     Please note that the header "crit" (critical) is always checked.
 </p>
 <table>
